# CSplat

./: CMakeLists.txt  README.md
shader/: gaussian.vert
src/: app.cpp  camera.cpp  util.cpp  util.hpp
